tests/fixtures/invalid/float_mod_bytes.py
# Cannot compute Float modulo Bytes
x: float = 1.0 % b"hello"
